--- a/SOL Ponto/Recibo/View/Cell/ReciboTableViewCell.xib
+++ b/SOL Ponto/Recibo/View/Cell/ReciboTableViewCell.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22130"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -11,15 +12,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ReciboTableViewCell" id="KGk-i7-Jjw" customClass="ReciboTableViewCell" customModule="Alura_Ponto" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="120"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ReciboTableViewCell" id="KGk-i7-Jjw" customClass="ReciboTableViewCell" customModule="SOL_Ponto" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="298" height="120"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="120"/>
+                <rect key="frame" x="0.0" y="0.0" width="298" height="120"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zCV-Iq-Bdw">
-                        <rect key="frame" x="0.0" y="5" width="320" height="110"/>
+                        <rect key="frame" x="0.0" y="5" width="298" height="110"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="STATUS:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lkf-NN-rvD">
                                 <rect key="frame" x="15" y="11" width="54" height="21"/>
@@ -51,14 +52,16 @@
                                 <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rXv-yr-vap">
-                                <rect key="frame" x="290" y="11" width="15" height="15"/>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rXv-yr-vap">
+                                <rect key="frame" x="248" y="-2" width="50" height="34"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="15" id="5aS-hR-3AQ"/>
                                     <constraint firstAttribute="height" constant="15" id="ceB-bA-N2H"/>
                                 </constraints>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" image="icon-delete"/>
+                                <buttonConfiguration key="configuration" style="plain" cornerStyle="fixed">
+                                    <imageReference key="image" image="trash.circle.fill" catalog="system" renderingMode="original"/>
+                                    <backgroundConfiguration key="background"/>
+                                </buttonConfiguration>
                                 <connections>
                                     <action selector="botaoDeletar:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="K0g-8c-RLx"/>
                                 </connections>
@@ -95,13 +98,13 @@
                 <outlet property="deletarButton" destination="rXv-yr-vap" id="y54-OO-jDv"/>
                 <outlet property="statusLabel" destination="0xE-ZA-Hfe" id="YsJ-Zg-3m1"/>
             </connections>
-            <point key="canvasLocation" x="118.84057971014494" y="6.6964285714285712"/>
+            <point key="canvasLocation" x="102.89855072463769" y="6.6964285714285712"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="icon-delete" width="20" height="20"/>
+        <image name="trash.circle.fill" catalog="system" width="128" height="123"/>
         <systemColor name="systemGreenColor">
-            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
